# routes/movies.js
@@ -1,0 +1,13 @@
+const express = require('express');
+const router = express.Router();
+
+const moviesController = require('../controllers/movies');
+
+router.get('/', moviesController.getMovies);
+router.get('/:id', moviesController.getMovie);
+
+router.post('/', moviesController.createMovie);
+router.put('/:id', moviesController.updateMovie);
+router.delete('/:id', moviesController.deleteMovie);
+
+module.exports = router;
